<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/bloc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bloc de Notas"
        android:layout_marginLeft="150dp"/>

    <EditText
        android:id="@+id/id"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="100dp"
        android:hint="@string/id"
        tools:text="@string/id" />

    <EditText
        android:id="@+id/txt_titulo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="150dp"
        android:hint="Titulo"
        tools:text="@string/txt_titulo" />

    <EditText
        android:id="@+id/txt_cuerpo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="200dp"
        android:hint="Cuerpo"
        tools:text="@string/txt_cuerpo" />

    <Button
        android:id="@+id/registrar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="260dp"
        android:backgroundTint="#03bb85"
        android:onClick="registrar"
        android:text="Registrar Bloc de Notas"
        tools:text="@string/registrar" />

    <Button
        android:id="@+id/buscar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="310dp"
        android:backgroundTint="#e5be"
        android:onClick="Buscar"
        android:text="Buscar un bloc de Notas"
        tools:text="@string/buscar" />

    <Button
        android:id="@+id/modificar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="360dp"
        android:backgroundTint="#e5be00"
        android:onClick="Modificar"
        android:text="Modificar Bloc de Notas"
        android:textColor="@color/black"
        tools:text="@string/modificar" />

    <Button
        android:id="@+id/eliminar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="410dp"
        android:backgroundTint="#CB3234"
        android:onClick="Eliminar"
        android:text="Eliminar Bloc de Notas"
        tools:text="@string/eliminar" />


</FrameLayout>